fix: hide list marker on mobile sitemap link, use relLangURL for sitemap URL

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -297,6 +297,14 @@
     }
 }
 
+.sidebar-sitemap-link {
+    list-style: none;
+
+    &::marker {
+        display: none;
+    }
+}
+
 .sitemap-header {
     margin-bottom: var(--spacing-lg);
 
